--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,7 +1,10 @@
 version: '3'
 vars:
-  DOCKER_IMAGE: https://ghcr.io/codeteam2-dev/echo:latest
+  DOCKER_IMAGE: codeteam2-dev/echo:latest
 tasks:
   build:
     cmds:
     - docker build -t {{ .DOCKER_IMAGE }} .
+  run:
+    cmds:
+    - docker run -it --rm {{ .DOCKER_IMAGE }}
