--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,10 +1,13 @@
 version: '3'
 vars:
-  DOCKER_IMAGE: codeteam2-dev/echo:latest
+  DOCKER_IMAGE: ghcr.io/codeteam2-dev/echo:latest
 tasks:
   build:
     cmds:
-    - docker build -t {{ .DOCKER_IMAGE }} .
+    - docker build -t {{ .DOCKER_IMAGE }} -f Dockerfile .
   run:
     cmds:
     - docker run -it --rm {{ .DOCKER_IMAGE }}
+  publish:
+    cmds:
+    - docker push {{ .DOCKER_IMAGE }}
