--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -4,10 +4,14 @@ vars:
 tasks:
   build:
     cmds:
-    - docker build -t {{ .DOCKER_IMAGE }} -f Dockerfile .
+    #- docker build -t {{ .DOCKER_IMAGE }} -f Dockerfile .
+    - goreleaser build -f .goreleaser.yaml
   run:
     cmds:
     - docker run -it --rm {{ .DOCKER_IMAGE }}
   publish:
     cmds:
     - docker push {{ .DOCKER_IMAGE }}
+  release:
+    cmds:
+    - goreleaser release -f .goreleaser.yaml
