--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -38,25 +38,16 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
-dockers:
-- image_templates:
-  - 'codeteam2-dev/echo:{{ .Tag }}-amd64'
-  use: buildx
-  build_flag_templates:
-  - "--pull"
-  - "--platform=linux/amd64"
-- image_templates:
-  - 'codeteam2-dev:echo:{{ .Tag }}-arm64'
-  use: buildx
-  build_flag_templates:
-  - "--pull"
-  - "--platform=linux/arm64"
-  goarch: arm64
-docker_manifests:
-- name_template: 'codeteam2-dev/echo:{{ .Tag }}'
-  image_templates:
-  - 'codeteam2-dev/echo:{{ .Tag }}-amd64'
-  - 'codeteam2-dev/echo:{{ .Tag }}-arm64'
+kos:
+  - repository: ghcr.io/codeteam2-dev/echo
+    tags:
+    - '{{.Version}}'
+    - latest
+    bare: true
+    preserve_import_paths: false
+    platforms:
+    - linux/amd64
+    - linux/arm64
 
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
