--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -2,6 +2,10 @@ version: '3'
 vars:
   DOCKER_IMAGE: ghcr.io/codeteam2-dev/echo:latest
 tasks:
+  setup:
+    cmds:
+    - brew install goreleaser/tap/goreleaser
+    - brew install ko
   build:
     cmds:
     #- docker build -t {{ .DOCKER_IMAGE }} -f Dockerfile .
